--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>title here</title>
+    <title>CornPub</title>
     <meta name="description" content="description of webapp here">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
@@ -10,10 +10,12 @@
     <!-- endinject -->
 
 </head>
-<body>
+<body ng-app="umovie">
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+    <div ui-view></div>
 
     <!-- inject:js -->
     <!-- endinject -->
