--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- endinject -->
 
 </head>
-<body ng-app="umovie">
+<body ng-app="cornpub" ng-controller="MainController" ng-class="bgService.getCurrentBg()">
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
