--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
     <!-- inject:css -->
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- endinject -->
 
 </head>
@@ -18,6 +21,11 @@
     <div ui-view></div>
 
     <!-- inject:js -->
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="app/app.js"></script>
     <!-- endinject -->
 </body>
 </html>
