Début de la page des séries télés

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
-<head>
+<head lang="">
     <meta charset="utf-8">
+    <meta http-equiv="Content-type" content="text/html; charset=UTF-8">
     <title>CornPub</title>
     <meta name="description" content="description of webapp here">
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
