actor page added, in progress

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/actor.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/style.css">
     <!-- endinject -->
 
@@ -26,6 +28,12 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/controllers/actorController.js"></script>
+    <script src="app/controllers/homeController.js"></script>
+    <script src="app/controllers/mainController.js"></script>
+    <script src="app/controllers/movieController.js"></script>
+    <script src="app/controllers/tvshowController.js"></script>
+    <script src="app/services/backgroundService.js"></script>
     <!-- endinject -->
 </body>
 </html>
