--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/actor.css">
-    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/actor.css">
     <link rel="stylesheet" href="css/tvshow.css">
     <!-- endinject -->
 
@@ -21,8 +21,10 @@
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <div class="background-image"></div>
 
     <div ui-view></div>
+
 
     <!-- inject:js -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
