--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,13 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/actor.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tvshow.css">
     <!-- endinject -->
 
 </head>
-<body ng-app="cornpub" ng-controller="MainController" ng-class="bgService.getCurrentBg()">
+<body ng-app="cornpub">
     <!--[if lt IE 10]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -33,12 +32,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app/app.js"></script>
-    <script src="app/controllers/actorController.js"></script>
-    <script src="app/controllers/homeController.js"></script>
-    <script src="app/controllers/mainController.js"></script>
-    <script src="app/controllers/movieController.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
-    <script src="app/services/backgroundService.js"></script>
     <!-- endinject -->
 </body>
 </html>
