--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,14 @@
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
 
     <!-- inject:css -->
+    <link rel="stylesheet" href="bower_components/toastr/toastr.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tvshow.css">
+    <link rel="stylesheet" href="css/watchlists.css">
     <!-- endinject -->
 
 </head>
@@ -24,15 +27,20 @@
 
     <div ui-view></div>
 
-
     <!-- inject:js -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/toastr/toastr.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/routes.js"></script>
+    <script src="app/services/watchlistsService.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
+    <script src="app/controllers/watchlistsController.js"></script>
     <!-- endinject -->
 </body>
 </html>
