base files tvshows

--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
     <script src="app/routes.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
     <script src="app/controllers/watchlistsController.js"></script>
+    <script src="app/services/tvShowService.js"></script>
     <script src="app/services/watchlistsService.js"></script>
     <!-- endinject -->
 </body>
