--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/navbar.css">
+    <link rel="stylesheet" href="css/pagination.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tvshow.css">
     <link rel="stylesheet" href="css/watchlists.css">
@@ -34,14 +35,15 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
-    <script src="app/services/searchSevice.js"></script>
-    <script src="app/services/watchlistsService.js"></script>
     <script src="app/controllers/navbarController.js"></script>
     <script src="app/controllers/searchController.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
     <script src="app/controllers/watchlistsController.js"></script>
+    <script src="app/services/searchSevice.js"></script>
+    <script src="app/services/watchlistsService.js"></script>
     <!-- endinject -->
 </body>
 </html>
