--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tvshow.css">
     <link rel="stylesheet" href="css/watchlists.css">
+    <link rel="stylesheet" href="css/actor.css">
     <!-- endinject -->
 
 </head>
@@ -31,13 +32,15 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
+    <script src="app/controllers/actorController.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
     <script src="app/controllers/watchlistsController.js"></script>
+    <script src="app/services/actorService.js"></script>
     <script src="app/services/watchlistsService.js"></script>
     <!-- endinject -->
 </body>
