--- a/public/index.html
+++ b/public/index.html
@@ -34,9 +34,11 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/angular-messages/angular-messages.min.js"></script>
     <script src="bower_components/angular-resource/angular-resource.min.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
+    <script src="bower_components/satellizer/satellizer.min.js"></script>
     <script src="app/app.js"></script>
     <script src="app/routes.js"></script>
     <script src="app/controllers/actorController.js"></script>
@@ -46,10 +48,15 @@
     <script src="app/controllers/searchController.js"></script>
     <script src="app/controllers/tvshowController.js"></script>
     <script src="app/controllers/watchlistsController.js"></script>
+    <script src="app/services/accountService.js"></script>
     <script src="app/services/actorService.js"></script>
     <script src="app/services/searchSevice.js"></script>
     <script src="app/services/tvShowService.js"></script>
     <script src="app/services/watchlistsService.js"></script>
+    <script src="app/controllers/user/loginController.js"></script>
+    <script src="app/controllers/user/logoutController.js"></script>
+    <script src="app/controllers/user/profileController.js"></script>
+    <script src="app/controllers/user/signupController.js"></script>
     <!-- endinject -->
 </body>
 </html>
