Ajouter le service de preview

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
     <script src="app/controllers/watchlistsController.js"></script>
     <script src="app/services/accountService.js"></script>
     <script src="app/services/actorService.js"></script>
+    <script src="app/services/movieService.js"></script>
+    <script src="app/services/previewService.js"></script>
     <script src="app/services/searchSevice.js"></script>
     <script src="app/services/tvShowService.js"></script>
     <script src="app/services/watchlistsService.js"></script>
