--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,9 @@
     <script src="app/services/actorService.js"></script>
     <script src="app/services/searchSevice.js"></script>
     <script src="app/services/tvShowService.js"></script>
+    <script src="app/services/userService.js"></script>
     <script src="app/services/watchlistsService.js"></script>
+    <script src="app/controllers/user/homeController.js"></script>
     <script src="app/controllers/user/loginController.js"></script>
     <script src="app/controllers/user/logoutController.js"></script>
     <script src="app/controllers/user/profileController.js"></script>
