--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="css/pagination.css">
+    <link rel="stylesheet" href="css/search.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/tvshow.css">
     <link rel="stylesheet" href="css/watchlists.css">
